// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1 renders 1 1`] = `
Array [
  <header
    className="Header"
  >
    <a
      href="/"
      onClick={[Function]}
    >
      <button
        type="button"
      >
        TvShows
      </button>
    </a>
  </header>,
  "Home",
]
`;

exports[`1 renders 2 1`] = `
Array [
  <header
    className="Header"
  >
    <a
      href="/"
      onClick={[Function]}
    >
      <button
        type="button"
      >
        TvShows
      </button>
    </a>
  </header>,
  "TvShowDetails",
]
`;

exports[`1 renders 3 1`] = `
Array [
  <header
    className="Header"
  >
    <a
      href="/"
      onClick={[Function]}
    >
      <button
        type="button"
      >
        TvShows
      </button>
    </a>
  </header>,
  "TvShowPage",
]
`;
